--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <a href="https://github.com/ermincode" target='blank'>
         <i class="fa-brands fa-square-github fa-2xl"></i>
       </a>
-      <p class='no'>Tel no. 09566348119</p>
+      <p class='no'>Tel no. +639566348119</p>
     </div>             
   </section>  
 
