--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <div class="input-box">
         <input type="number" name='number' placeholder="Mobile Number" maxLength={25}/>
       </div>
-        <textarea name="message" id="area" cols="30" rows="8" placeholder="Youre Message"></textarea>
+        <textarea name="message" id="area" cols="30" rows="8" placeholder="Your Message"></textarea>
       <div class="box">
         <input type="submit" value="Send Message" class="btn"/>
       </div>
